# climate-data-viz

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py  routes.py  schemas.py
backend/app/api/routes/: __init__.py  analytics.py  data.py  stations.py
backend/app/core/: __init__.py  dependencies.py  exceptions.py  logging.py
backend/app/domains/: __init__.py
backend/app/domains/ai/: __init__.py  prompts.py  routes.py  schemas.py  service.py
backend/app/domains/analytics/: __init__.py  routes.py  schemas.py  service.py
backend/app/domains/climate_data/: __init__.py  routes.py  schemas.py  service.py
backend/app/domains/shared/: __init__.py  data_service.py
backend/app/domains/stations/: __init__.py  routes.py  schemas.py  service.py
backend/app/services/: __init__.py  analytics.py  data_loader.py
backend/app/services/llm/: __init__.py  base.py  grok.py  mock.py
backend/data/: climate_data.csv
backend/tests/: __init__.py  conftest.py  test_ai.py  test_analytics.py  test_api.py  test_core.py  test_llm.py
docs/images/: .gitkeep
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
terraform/: .gitignore  ec2.tf  main.tf  outputs.tf  security.tf  terraform.tfvars.example  user_data.sh  variables.tf  vpc.tf
(+128 files in other folders)
